[REFACTOR] Remove code smells